# project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  add_initial_data.py  alembic.ini  docker-compose.yml  old_env_file.txt  pyproject.toml
.aws/: task-definition.json
.github/workflows/: ci_cd.yml
alembic/: env.py
alembic/versions/: bdd7ae0e0eb7_initial_tables.py  dbe2cb688f14_initial.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  document.py  project.py  projects.py  user.py
app/core/: __init__.py  config.py  jwt.py  security.py
app/crud/: __init__.py  document.py  project.py  user.py
app/db/: __init__.py  base.py  buckets.py  session.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  project.py
app/schemas/: __init__.py  document.py  image.py  project.py  token.py  user.py
main/: __init__.py  main.py  models.py  schemas.py  utilis.py
tests/: conftest.py  test_document.py  test_main.py  test_project.py  test_projects.py  test_user.py
